# SmartLink

./: LICENSE  README.md  next.config.ts  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
smartlink-websocket-server/: Cargo.toml  README.md
smartlink-websocket-server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db_init.rs  error.rs  lib.rs  main.rs
src-tauri/src/auth/: README.md  commands.rs  db.rs  mod.rs  models.rs  oauth.rs  utils.rs
src-tauri/src/chat/: README.md  commands.rs  db.rs  encryption.rs  manager.rs  mod.rs  models.rs  websocket.rs
src-tauri/src/contacts/: README.md  commands.rs  db.rs  mod.rs  models.rs
src-tauri/src/db/: storage.rs  types.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/webrtc/: commands.rs  manager.rs  mod.rs  models.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/ai-chat/: page.tsx
src/app/api/groq/ai-chat/: route.ts
src/app/api/groq/translate/: route.ts
src/app/auth/: page.tsx
src/app/callback/: page.tsx
src/app/chat/: page.tsx
src/app/contacts/: page.tsx
src/app/discover/: page.tsx
src/app/moments/: page.tsx
src/app/settings/: page.tsx
src/components/ai/: AiAssistant.tsx
src/components/ai-chat/: AiChatList.tsx  AiChatWindow.tsx  ChatInput.tsx  MessageBubble.tsx
src/components/auth/: LoginForm.tsx  SignupForm.tsx  SplashScreen.tsx
src/components/chat/: ChatInput.tsx  ChatItem.tsx  ChatList.tsx  ChatWindow.tsx  MessageBubble.tsx
src/components/contacts/: ContactsList.tsx  ContactsSidebar.tsx  SearchUserModal.tsx
src/components/features/: EncryptionIndicator.tsx  MultiWindowManager.tsx  NotificationsPanel.tsx  StatusSelector.tsx  VoiceMessageRecorder.tsx
src/components/hoc/: withAuth.tsx
src/components/layout/: AppWindowFrame.tsx  Footer.tsx  Header.tsx  SideNav.tsx
src/components/moments/: MomentsFeed.tsx  PostCard.tsx  StoryReel.tsx
src/components/ui/: Avatar.tsx  Button.tsx  GlassCard.tsx  GlowEffect.tsx
src/context/: AuthContext.tsx  ContactsContext.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAuth.ts
src/lib/: authApi.ts  chatApi.ts  deepgramUtil.ts
src/lib/constants/: languages.ts
