[package]
name = "smartlink-websocket-server"
version = "0.1.0"
edition = "2021"
authors = ["Harrison <u7541840@gmail.com>"]
description = "WebSocket server for SmartLink chat application"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1